= Nokee Release Notes
:jbake-type: release_notes

This first release kickstart the native development by providing the Gradle community with a plugin to support building JVM libraries using the Java Native Interface runtime.

== Java Native Interface (JNI) libraries

// Explain what can be done
// Link to samples
// Link to guides
// Link to plugin references
// Explain limitation

== Reporting Problems
If you find a problem with any of the plugins, please file a bug on https://github.com/nokeedev/gradle-native[GitHub Issues] adhering to our issue guidelines.
If you're not sure you're encountering a bug, please https://discuss.gradle.org/tags/c/help-discuss/14/native[use the Gradle user forum] or the https://app.slack.com/client/TA7ULVA9K/CDDGUSJ7R[[Gradle Community Slack].

Let's build happiness with Gradle, and I'm looking forward to your feedback via https://twitter.com/nokeedev[Twitter] or on https://github.com/nokeedev[GitHub].