@@ -1,5 +1,6 @@
 = Nokee User Manual
 :jbake-type: manual_chapter
+:jbake-description: Learn the concept behind Nokee plugins for Gradle.
 
 This user manual cover the native support in Gradle offered by Nokee plugin suite.
 It is recommended that you have a basic understanding of Gradle Build Tool before reading this manual as it builds on the functionality offered by Gradle.
