@@ -1,5 +1,6 @@
 = Nokee Samples
 :jbake-type: sample_index
+:jbake-description: See the Nokee plugins in action for building native project in Gradle.
 
 // publishing JNI library
 // piecing together a JNI lirary from external projects
