@@ -1,6 +1,7 @@
 = JNI Library with Target Machines
 :jbake-type: sample_chapter
 :jbake-tags: sample, jni, junit
+:jbake-description: See how to configure the target machines of a Java Native Interface (JNI) library using the Gradle Nokee plugins.
 
 NOTE: You can open this sample inside an IDE using the https://www.jetbrains.com/help/idea/gradle.html#gradle_import_project_start[IntelliJ native importer] or https://projects.eclipse.org/projects/tools.buildship[Eclipse Buildship].
 
