@@ -43,4 +43,10 @@ class SampleContentFixture {
 		Document document = asciidoctor.loadFile(contentFile, options().asMap())
 		return new CommandDiscovery().extractAsciidocCommands(document)
 	}
+
+	Optional<String> getDescription() {
+		Asciidoctor asciidoctor = Asciidoctor.Factory.create()
+		Document document = asciidoctor.loadFile(contentFile, options().asMap())
+		return Optional.<String>ofNullable((String)document.attributes.get('jbake-description'))
+	}
 }
