@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
 	<title><%if (content.title) {%>${content.title}<% } else { %>JBake<% }%></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
+	<%if (content.description) {%><meta name="description" content="${content.description}"><%}%>
 	<meta name="author" content="">
 	<meta name="keywords" content="">
 
