@@ -1,5 +1,6 @@
 = Nokee Release Notes
 :jbake-type: release_notes
+:jbake-description: See what version {jbake-version} of the Gradle Nokee plugins has to offer!
 
 This first release kickstart the native development by providing the Gradle community with a plugin to support building JVM libraries using the Java Native Interface runtime.
 
